<resources>
    <string name="app_name">RagusaTourGuide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="fragment_title_1">UNESCO</string>
    <string name="fragment_title_2">OTHERS</string>
    <string name="fragment_title_3">Food &amp; Beverage</string>
    <string name="fragment_title_4">Directions</string>
    <string name="unesco_name_1">San Giovanni Battista</string>
    <string name="unesco_name_2">Palazzo Vescovile Schininà</string>
    <string name="unesco_name_3">Palazzo Zacco</string>
    <string name="unesco_name_4">Palazzo Bertini</string>
    <string name="unesco_name_5">Santa Maria Delle Scale</string>
    <string name="unesco_name_6">Santa Maria Dell\'Itria</string>
    <string name="unesco_name_7">Palazzo Cosentini</string>
    <string name="unesco_name_8">Chiesa Del Purgatorio</string>
    <string name="unesco_name_9">Chiesa S. Filippo Neri</string>
    <string name="unesco_name_10">San Giorgio</string>
    <string name="unesco_name_11">San Francesco All\'Immacolata</string>
    <string name="unesco_description_1">The late baroque Saint John Cathedral, originally placed in Ragusa Ibla, was rebuilt after the earthquake of 1693 on the Patro hill, the place chosen for the reconstruction of new Ragusa. Consecrated in 1778, when the main works were finished. Inside the church, you can see golden stucco decorations and fine paintings. In the majestic façade, there are six Corinthian columns and three portals. The bell tower with its 50 meters dominates the façade. In the tympanum there are an electric clock and two solar clocks. In the sides of the church, they were built two small gardens. The parvis is a terrace with an asphaltic stone balustrade that incorporates 24 seats.</string>
    <string name="unesco_description_2">The Marquis Mario Schininà Cosentini built the palace at the end of 18th century. The heirs divided it in two parts, one remained property of the family and the other became episcopal seat of Ragusa. It is famous for its balconies of white stone carved in rococo style. </string>
    <string name="unesco_description_3">The Baron Melfi of S\'Antonio built the palace in 1780, later at the end of 19th century Zacco family bought it. It is famous for the carvings in the Sicilian late baroque style, which decorate its facades, especially the grotesque masks and the musicians which appear to support the palazzo\'s balconies.</string>
    <string name="unesco_description_4">This palace was built at the end of 18th century and some years later bought by Bertini family. In 1847 the road level was lowered and the three original doorways became the current three balconies. In the keystones of each doorway, you can see three grotesque masks that represent the rich merchant, the aristocrat and the poor, made of the local asphaltic stone. </string>
    <string name="unesco_description_5">Saint Mary of the Stars church was built on a convent by some Cistercian monks, in the first half of the 13th century, then Chiaramonte family rebuilt it in a Gothic style in 1300. Only partially damaged by the 1693 earthquake, the building was enlarged and rebuilt in 1700. The current name refers to its position at the top of the stairs that connect upper Ragusa with Ragusa Ibla. The most important part of the church is the right aisle with the carved arch in late Catalan gothic style.</string>
    <string name="unesco_description_6">Saint Mary of Itria was built in 14th century by Chiaramonte family and first dedicated to Saint Julian Bishop “the Hospitaller”, because it was placed next to a charitable institution for poor and ill people. The current church name is due to the huge worship of an Itria Virgin Mary image. The owner of the church for centuries was the Order of knights of Malta.  In the middle of 18th century, it was rebuilt and enlarged in late baroque style. Particularly interesting are the five altars of the side aisles carved and decorated by the local sculptors Cultraro between 1741 and 1758.</string>
    <string name="unesco_description_7">The Baron Raffaele Cosentini built this palace in 18th century and it was completed by 1767. It is placed in an important crossroad of Ragusa as demonstrated the two statues of patron saints of travellers Saint Francis of Paola (still existing) and Saint Rocco, put in the two corners of the palace. The three balconies of the upper floor are supported by brackets decorated with two grotesque masks each. The balcony of the lateral side instead, has five brackets decorated with the most original masks of the city: grotesque masks that keep in their mouths symbolic animals and are dominated by symbolic representations of abundance.</string>
    <string name="unesco_description_8">Purgatory church was consecrated in 1658 and the 1693 earthquake didn’t damage it, but during the 18th century the church was rebuilt and enlarged due to the increasing numbers of inhabitants. A stair of 26 steps is placed before the church and give it a relevant position inside the square. Inside the church there are two important paintings: “The saints and the souls of purgatory” made by Francesco Manno and “The Lady of Rosary” made by Tommaso Pollace.</string>
    <string name="unesco_description_9">Saint Philip Neri was built in 1636 thanks to the economic help of some local aristocratic families. It was enlarged in 1740 and some years later deeply renovated. For this it is difficult to catch the original appearance of the church, that you can see only in the side chapel that maintains the original floor, a painting of 17th century, and the altar covered by painted glasses to imitate the marble. </string>
    <string name="unesco_description_10">Before the 1693 earthquake Saint George cathedral was in the east part of Ragusa Ibla, near the Iblean Gardens, where today you can see the only part survived to the earthquake, that is the Catalan gothic old portal of 15th century. In 18th century, the church was rebuilt on the Saint Nicolas church, in a more central position. In 1738 the architect Rosario Gagliardi received the task to elaborate the project of the new church, and he realized one of his masterpiece. The church is placed above a majestic stair. The façade is divided in three parts: below you find the big portal with a carved frame and a carved wooden door, in the middle the coloured window where is represented Saint George killing the dragon and above the bells tower and a clock, finally on the top the bulb pinnacle with the cross. Inside there are many interesting paintings of  Vito D’Anna, Francesco Manno, Dario Querci, the Saint George treasure and the two simulacrums (Saint George and the Holy ark) you can see during Saint George feast. Very fine the Serassi pipe organ and the white stone altarpiece made by Gagini between 1573 and 1576.</string>
    <string name="unesco_description_11">Immaculate Conception church was built in the middle of 13th century, together to the convent, by the local Franciscan friars. Between 16th and 17th century, it was rebuilt and enlarged. The 1693 earthquake caused serious damages, but the church was rapidly repaired and reopened in 1711. From the original gothic church remained only: the portal with its particular hook capitals and the base of the bell tower. Inside the church is very rich, you can find many interesting art works like: the painting “L\'Estasi di Sant\'Andrea” of Antonino Monoli (1724), a holy water font made of asphaltic stone (1500), the painting “San Giuseppe da Copertino” of Elia Interguglielmini (1816), the painting “Immaculate Conception” of Francesco Manno (1796), the mausoleum of the Baron Corrado Arezzo and many others. After the 1990 earthquake, the church was restored and during the restoring works, they were discovered some particular frescos made with lime.</string>
    <string name="unesco_address_1">Piazza S. Giovanni, 41&#8211;45 45, 97100 Ragusa RG</string>
    <string name="unesco_address_2">Via Roma, 109, 97100 Ragusa RG</string>
    <string name="unesco_address_3"> Via S. Vito, 97100 Ragusa RG</string>
    <string name="unesco_address_4">Corso Italia, 22, 97100 Ragusa RG</string>
    <string name="unesco_address_5"> C.so Mazzini, 97100 Ragusa Ibla RG</string>
    <string name="unesco_address_6">Salita Commendatore, 97100 Ragusa RG</string>
    <string name="unesco_address_7">Corso Mazzini, 97100 Ragusa RG</string>
    <string name="unesco_address_8">Piazza della Repubblica, 2, 97100 Ragusa RG</string>
    <string name="unesco_address_9"> Via Giusti, 97100 Ragusa RG</string>
    <string name="unesco_address_10">Piazza Duomo, 97100 Ragusa RG</string>
    <string name="unesco_address_11">Piazza Chiaramonte, 97100 Ragusa RG</string>
    <string name="others_name_1">Palazzo Arezzo</string>
    <string name="others_name_2">Circolo Di Conversazione</string>
    <string name="others_name_3">Giardini Iblei</string>
    <string name="others_name_4">Castello Di Donnafugata</string>
    <string name="others_name_5">Museo Archeologico di Ragusa</string>
    <string name="others_name_6">Chiesa di S.Giacomo</string>
    <string name="others_name_7">Chiesa di Sant\'Agata ai Cappuccini</string>
    <string name="others_description_1">The palace of the Baron of Donnafugata is certainly one of the most important palace of Ragusa Ibla. The original palace built by don Vincenzo Arezzo at the beginning of 17th century, was destroyed by the 1693 earthquake. The grandson Vincenzo rebuilt the palace immediately after the earthquake in the same place. About a century later, the Baron Corrado Maria Arezzo decided to enlarge and rebuilt the palace. At the beginning of 1800 the building is ready and the baron entrusts Stefano Cotardi to paint and decorate the interior, following the neoclassical style. The garden was arranged and adorned with statues. In the second part of 19th century, the Baron Corrado Arezzo de Spuches transformed the palace as a place apt to meet eminent people. The doorway was enlarged and transformed in a long stone gallery that led to the garden in the left side, and to a sumptuous perron made of white marble in the right side. In the first floor the Baron created representative rooms where he received and amazed his guests with luxurious furniture, decorations, furnishings and many artworks. The heirs of the Baron decided to live in the palace, but to do this they had to build a residential wing. Today they are renovating the different parts of the palace. Interesting is the last balcony in the left where was built a wooden loggia to imitate the Maltese ones, and the small theatre renovated in 2004.</string>
    <string name="food_address_1">Contrada Arancelli SNC, 97100, Ragusa</string>
    <string name="food_number_1">+390932686458</string>
    <string name="food_sito_6">https://m.facebook.com/LoSteri-1545780692386209/</string>
    <string name="direction_description_1">Comiso Airport "Pio La Torre" (CIY), also known as Vincenzo Magliocco Airport, is located in the Sicilian town of Comiso in the Ragusa province. It is only <u>15km</u> far away from Ragusa.  <a href="http://www.aeroportodicomiso.eu/it/">Check the site.</a></string>
    <string name="button">Website</string>
    <string name="image_description">Sight Photo</string>
</resources>