<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_layout"
    android:paddingTop="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="4dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            tools:src="@drawable/piolatorre"
            android:scaleType="fitXY"
            android:id="@+id/photo"
            android:contentDescription="@string/image_description"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                android:id="@+id/card_view"
                >
            <TextView
                android:paddingTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                tools:text="Titolo"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/direction_description_1"
                android:textColor="#555" />
                <Button
                    android:id="@+id/card_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button"
                    android:theme="@style/PrimaryFlatButton"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>