<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@color/colorSecondary"
        app:navigationIcon="@mipmap/ic_back"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="fitXY"
                android:src="@drawable/capinera" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingTop="14dp"
                android:text="La Capinera"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/number_ico"
                    android:layout_toStartOf="@id/number_ico"
                    android:padding="20dp"
                    android:text="@string/food_number_1"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/number_ico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_call"
                    android:layout_marginRight="10dp"
                    android:background="?attr/selectableItemBackground"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/food_sito_6"
                android:textSize="14sp"
                android:layout_toLeftOf="@id/web_ico"
                android:layout_toStartOf="@id/web_ico"
                android:textStyle="bold"
                android:gravity="end"/>

                <ImageView
                    android:id="@+id/web_ico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_web"
                    android:layout_marginRight="10dp"
                    android:background="?attr/selectableItemBackground"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/food_address_1"
                android:textSize="14sp"
                android:layout_toLeftOf="@id/map_ico"
                android:layout_toStartOf="@id/map_ico"
                android:textStyle="bold"
                android:gravity="end"/>
                <ImageView
                    android:id="@+id/map_ico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_map"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="?attr/selectableItemBackground"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

